--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -46,7 +46,7 @@
 <div class="container mt-4">
     <h2>Корзина</h2>
 
-    <!-- Уведомление об изменении цен -->
+
     <div id="price-update-alert" class="alert alert-info alert-dismissible fade show">
         <i class="bi bi-info-circle"></i>
         <span id="price-update-message"></span>
@@ -64,7 +64,6 @@
         <div class="row">
             <div class="col-md-8">
                 <div id="cart-items">
-                    <!-- Товары будут загружены через JavaScript -->
                 </div>
             </div>
 
@@ -101,23 +100,23 @@
         loadCart();
     });
 
-    // Основная функция загрузки корзины
+
     async function loadCart() {
         try {
-            // Сначала обновляем цены из базы данных
+
             await updateCartPrices();
 
-            // Затем отображаем корзину
+
             displayCart();
 
         } catch (error) {
             console.error('Ошибка загрузки корзины:', error);
-            // Fallback: показать корзину без обновления цен
+
             showFallbackCart();
         }
     }
 
-    // Обновление цен из базы данных
+
     async function updateCartPrices() {
         if (Object.keys(cart).length === 0) return;
 
@@ -130,21 +129,21 @@
             let updatedPrices = 0;
             let priceChanges = [];
 
-            // Обновляем цены и проверяем наличие товаров
+
             Object.keys(cart).forEach(productId => {
                 const currentProduct = currentProducts.find(p => p.id == productId);
 
                 if (currentProduct) {
-                    // Запоминаем старую цену для сравнения
+
                     const oldPrice = cart[productId].price;
 
-                    // Обновляем все данные товара
+
                     cart[productId].price = currentProduct.price;
                     cart[productId].name = currentProduct.name;
                     cart[productId].inStock = currentProduct.inStock;
                     cart[productId].imageId = currentProduct.previewImageId;
 
-                    // Считаем изменения цен
+
                     if (oldPrice !== currentProduct.price) {
                         updatedPrices++;
                         priceChanges.push({
@@ -154,16 +153,16 @@
                         });
                     }
                 } else {
-                    // Товар больше не существует
+
                     delete cart[productId];
                     removedItems++;
                 }
             });
 
-            // Сохраняем обновленную корзину
+
             saveCart();
 
-            // Показываем уведомления
+
             if (removedItems > 0) {
                 showPriceUpdateMessage(`Удалено ${removedItems} товаров, которых больше нет в каталоге`);
             }
@@ -172,17 +171,17 @@
                 const message = `Обновлены цены для ${updatedPrices} товаров`;
                 showPriceUpdateMessage(message);
 
-                // Детали изменения цен (для отладки)
+
                 console.log('Изменения цен:', priceChanges);
             }
 
         } catch (error) {
             console.error('Ошибка обновления цен:', error);
-            throw error; // Пробрасываем ошибку выше
+            throw error;
         }
     }
 
-    // Отображение корзины
+
     function displayCart() {
         const cartItems = Object.values(cart);
 
@@ -195,14 +194,14 @@
         document.getElementById('empty-cart').style.display = 'none';
         document.getElementById('cart-content').style.display = 'block';
 
-        // Обновляем итоги
+
         const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
         const totalPrice = cartItems.reduce((sum, item) => sum + (item.price * item.quantity), 0);
 
         document.getElementById('total-items').textContent = totalItems;
         document.getElementById('total-price').textContent = totalPrice.toFixed(2) + ' ₽';
 
-        // Отображаем товары
+
         const itemsContainer = document.getElementById('cart-items');
         itemsContainer.innerHTML = '';
 
@@ -254,7 +253,7 @@
         });
     }
 
-    // Fallback на случай ошибки
+
     function showFallbackCart() {
         const cartItems = Object.values(cart);
 
@@ -267,7 +266,7 @@
         document.getElementById('empty-cart').style.display = 'none';
         document.getElementById('cart-content').style.display = 'block';
 
-        // Показываем предупреждение
+
         const warningHtml = `
             <div class="alert alert-warning">
                 <i class="bi bi-exclamation-triangle"></i>
@@ -276,7 +275,7 @@
         `;
         document.getElementById('cart-content').insertAdjacentHTML('afterbegin', warningHtml);
 
-        // Отображаем корзину с устаревшими данными
+
         const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
         const totalPrice = cartItems.reduce((sum, item) => sum + (item.price * item.quantity), 0);
 
@@ -328,7 +327,7 @@
         });
     }
 
-    // Показать сообщение об изменении цен
+
     function showPriceUpdateMessage(message) {
         const alertElement = document.getElementById('price-update-alert');
         const messageElement = document.getElementById('price-update-message');
@@ -336,7 +335,7 @@
         messageElement.textContent = message;
         alertElement.style.display = 'block';
 
-        // Автоматически скрыть через 5 секунд
+
         setTimeout(() => {
             alertElement.style.display = 'none';
         }, 5000);
@@ -351,7 +350,7 @@
             } else {
                 cart[productId].quantity = newQuantity;
                 saveCart();
-                loadCart(); // Перезагружаем для обновления цен
+                loadCart();
             }
         }
     }
@@ -370,14 +369,14 @@
             return;
         }
 
-        // Проверяем наличие товаров перед оформлением
+
         const outOfStockItems = Object.values(cart).filter(item => !item.inStock);
         if (outOfStockItems.length > 0) {
             alert('Некоторые товары отсутствуют в наличии. Пожалуйста, удалите их из корзины перед оформлением заказа.');
             return;
         }
 
-        // Преобразуем корзину в нужный для бэкенда формат
+
         const orderData = {};
         for (const key in cart) {
             orderData[key] = { id: cart[key].id, quantity: cart[key].quantity };
@@ -406,7 +405,7 @@
             const newOrder = await response.json();
             alert(`Заказ №${newOrder.id} успешно оформлен!`);
 
-            // Очищаем корзину и переходим на страницу заказов
+
             cart = {};
             saveCart();
             window.location.href = '/my-orders.html';
