--- a/src/main/resources/static/createProduct.html
+++ b/src/main/resources/static/createProduct.html
@@ -79,10 +79,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // Предпросмотр для нескольких изображений
+
     document.getElementById('files').addEventListener('change', function(event) {
         const previewContainer = document.getElementById('image-preview-container');
-        previewContainer.innerHTML = ''; // Очищаем контейнер перед показом новых превью
+        previewContainer.innerHTML = '';
         if (this.files) {
             Array.from(this.files).forEach(file => {
                 const reader = new FileReader();
@@ -120,11 +120,11 @@
 
         formData.append('product', new Blob([JSON.stringify(product)], {type: "application/json"}));
 
-        // Добавляем все выбранные файлы
+
         const fileInput = document.getElementById('files');
         if (fileInput.files.length > 0) {
             for (const file of fileInput.files) {
-                formData.append('files', file); // Используем имя 'files', как в контроллере
+                formData.append('files', file);
             }
         }
 
@@ -135,7 +135,7 @@
             });
 
             if (!response.ok) {
-                // Пытаемся получить текст ошибки, если он есть
+
                 let errorMessage = 'Неизвестная ошибка сервера';
                 try {
                     const error = await response.json();
@@ -153,7 +153,7 @@
                     Товар успешно добавлен! ID: ${data.id}
                 </div>`;
 
-            // Очищаем форму и превью
+
             document.getElementById('productForm').reset();
             document.getElementById('image-preview-container').innerHTML = '';
 
